--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Clim - Design Studio</title>
     <meta name="description" content="Project Clim - Bridging traditional craftsmanship with modern technology" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Project Clim" />
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="CLIM" />
+    <link rel="manifest" href="/site.webmanifest" />
 
     <meta property="og:title" content="Project Clim - Design Studio" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Project Clim - Bridging traditional craftsmanship with modern technology" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.jpg" />
   </head>
 
   <body>
