--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Clim - Design Studio</title>
-    <meta name="description" content="Project Clim - Bridging traditional craftsmanship with modern technology" />
+    <meta name="description" content="Bridging traditional craftsmanship with modern technology" />
     <meta name="author" content="Project Clim" />
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -14,7 +14,7 @@
     <link rel="manifest" href="/site.webmanifest" />
 
     <meta property="og:title" content="Project Clim - Design Studio" />
-    <meta property="og:description" content="Project Clim - Bridging traditional craftsmanship with modern technology" />
+    <meta property="og:description" content="Bridging traditional craftsmanship with modern technology" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og-image.jpg" />
   </head>
