whatsapp open graph

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <meta property="og:title" content="Project Clim - Design Studio" />
     <meta property="og:description" content="Bridging traditional craftsmanship with modern technology" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://projectclim.com/" />
     <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
   </head>
 
   <body>
